--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     function testInfo(foneInput) {
       let OK = er.exec(foneInput.value)
 
-      if (!OK) window.alert(RegExp.input + " Não é em número de telefone com código de área!")
-      else window.alert("Obrigado, o seu número de telefone é " + OK[0])
+      if (!OK) alert(RegExp.input + " Não é em número de telefone com código de área!")
+      else alert("Obrigado, o seu número de telefone é " + OK[0])
     }
   </script>
 </head>
