--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <p>Informe o seu número de telefone (com código de área) e então clique em "Check". <br>O formato esperado é
+  <p>Informe seu número de telefone (com código de área) e então clique em "Check". <br>O formato esperado é
     ###-#####-####</p>
   <form>
     <input id="fone">
